--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Categories.IndexModel
+@model Proiect.Pages.Categories.IndexModel
 
 @{
     ViewData["Title"] = "Index";
