--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Rus_Roxana_Lab8
-@namespace Rus_Roxana_Lab8.Pages
+@using Proiect
+@namespace Proiect.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
