--- a/Pages/Cars/Delete.cshtml
+++ b/Pages/Cars/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Books.DeleteModel
+@model Proiect.Pages.Cars.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,37 +9,37 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Book</h4>
+    <h4>Car</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.Title)
+            @Html.DisplayNameFor(model => model.Car.Model)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Title)
+            @Html.DisplayFor(model => model.Car.Model)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.Author)
+            @Html.DisplayNameFor(model => model.Car.Mark)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Author)
+            @Html.DisplayFor(model => model.Car.Mark)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.Price)
+            @Html.DisplayNameFor(model => model.Car.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Price)
+            @Html.DisplayFor(model => model.Car.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.PublishingDate)
+            @Html.DisplayNameFor(model => model.Car.LaunchingDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.PublishingDate)
+            @Html.DisplayFor(model => model.Car.LaunchingDate)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Book.ID" />
+        <input type="hidden" asp-for="Car.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
