--- a/Pages/Categories/Create.cshtml
+++ b/Pages/Categories/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Categories.CreateModel
+@model Proiect.Pages.Categories.CreateModel
 
 @{
     ViewData["Title"] = "Create";
