--- a/Pages/Categories/Delete.cshtml
+++ b/Pages/Categories/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Categories.DeleteModel
+@model Proiect.Pages.Categories.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
