--- a/Pages/Categories/Details.cshtml
+++ b/Pages/Categories/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Categories.DetailsModel
+@model Proiect.Pages.Categories.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
