--- a/Pages/Categories/Edit.cshtml
+++ b/Pages/Categories/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Categories.EditModel
+@model Proiect.Pages.Categories.EditModel
 
 @{
     ViewData["Title"] = "Edit";
