--- a/Pages/Producers/Delete.cshtml
+++ b/Pages/Producers/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Publishers.DeleteModel
+@model Proiect.Pages.Producers.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,19 +9,19 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Publisher</h4>
+    <h4>Producer</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Publisher.PublisherName)
+            @Html.DisplayNameFor(model => model.Producer.ProducerName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Publisher.PublisherName)
+            @Html.DisplayFor(model => model.Producer.ProducerName)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Publisher.ID" />
+        <input type="hidden" asp-for="Producer.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
