--- a/Pages/Producers/Edit.cshtml
+++ b/Pages/Producers/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Rus_Roxana_Lab8.Pages.Publishers.EditModel
+@model Proiect.Pages.Producers.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,17 +7,17 @@
 
 <h1>Edit</h1>
 
-<h4>Publisher</h4>
+<h4>Producer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Publisher.ID" />
+            <input type="hidden" asp-for="Producer.ID" />
             <div class="form-group">
-                <label asp-for="Publisher.PublisherName" class="control-label"></label>
-                <input asp-for="Publisher.PublisherName" class="form-control" />
-                <span asp-validation-for="Publisher.PublisherName" class="text-danger"></span>
+                <label asp-for="Producer.ProducerName" class="control-label"></label>
+                <input asp-for="Producer.ProducerName" class="form-control" />
+                <span asp-validation-for="Producer.ProducerName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
